# CryptoCast_AI

./: .replit  README.md  ai_predictor.py  app.py  crypto_service.py  gunicorn.conf.py  main.py  pattern_analyzer.py  pyproject.toml  replit.md  requirements.txt  routes.py  run_socketio.py
.local/state/replit/agent/: .latest.json
static/css/: custom.css
static/js/: dashboard.js  websocket.js
templates/: base.html  dashboard.html  defi.html  patterns.html  predictions.html
